Fix PR52402. Check if the shared memory was already created for this proxy_server_conf

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1240181 13f79535-47bb-0310-9956-ffa450edef68